--- a/EC_superviser.ipynb
+++ b/EC_superviser.ipynb
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "81cb351f",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "28ba0d93",
    "metadata": {},
    "outputs": [],
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "id": "f75ba797",
    "metadata": {},
    "outputs": [],
@@ -2521,7 +2521,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f61bc9b7b903422aa0cf41b973a41ee9",
+       "model_id": "5d7fb86d29d3467b870dc653026af68f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2585,7 +2585,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a2295c368814dc59e4701f4af43b386",
+       "model_id": "d7a5726367cd4ded8f6988872d0f7b1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2614,7 +2614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5a79a2e978547f0967e717b13e48382",
+       "model_id": "b5304ec64a08439caa531a7cc58782b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2632,7 +2632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "id": "dc2c7cbb",
    "metadata": {},
    "outputs": [],
@@ -3085,7 +3085,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "981d2b7fdaa54eec89f2c32e47666df6",
+       "model_id": "0ff1947d4706490084a25011ee26f5b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3119,7 +3119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f50c9164e0e34e4cb850f4160964c097",
+       "model_id": "59ed70c499094255afdc845d0bf32a4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3162,7 +3162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3057277c41cd44b9ac40875f656f3555",
+       "model_id": "434bdc203af84ac39d4cc6b4df569ef6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3195,7 +3195,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fbff19891f445d68624d6fefcc86183",
+       "model_id": "47fa2b4470c64aa192aa48f03680709b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3224,7 +3224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cb2729ca4c8419b9bfbba0a2bcb26bf",
+       "model_id": "084ff2aae1c240b9b2b9f1c3acf67420",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3275,7 +3275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e0db6b40f504a93a236beb3d227357f",
+       "model_id": "0171d16068d74d3ca2385ba71b5f7de9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3317,7 +3317,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c7d8ed40d0e49daa4cce43f34fd40ad",
+       "model_id": "7c6eef82cf264cb8adef7e2b70d749b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3342,7 +3342,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e10543bb77d9404e9cbd05013fd5c530",
+       "model_id": "5155d90442b843dfb210039917f10026",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3371,7 +3371,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8faa25e68bc47dfaae810890bb44062",
+       "model_id": "eaf326a831df44d590396b6c751a5883",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3406,7 +3406,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5e0d069f07b4da19f34e5d3961be6d5",
+       "model_id": "177d05b5c9e24f938040ec6ed14c6004",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3449,7 +3449,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ceaeff537cd6435d8116e3fc3d7f4c3a",
+       "model_id": "fe47f31006d045e986577b001969d123",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3474,7 +3474,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71b7d8285d3f440bb1bd105dcd23e385",
+       "model_id": "a7adf7502e124fa2a159f5957699f438",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3503,7 +3503,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60cd88d42a064a8dbe31e0863c4ddd10",
+       "model_id": "831308da2bf04bdb8ed3849094ccc3ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3538,7 +3538,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "937f5c9c717e49f987c9331c99ac8e9c",
+       "model_id": "0112d2d68a71498eb41afc56a11e6a4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3588,7 +3588,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3d0ded7264e40cda6e2d4ac80df25bc",
+       "model_id": "c19fbc7fe7c0472eabbd32ef991f8136",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3644,7 +3644,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0bcceb0496f4406aeda28276ff6be3d",
+       "model_id": "eae63c2c9b084212b80af98e89538e80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3669,7 +3669,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20e0d9ce2b2f459cb9533768bc7c65cd",
+       "model_id": "6aaacf5f4697406787324eda75492aa2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3694,7 +3694,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3f82912322f4a108e28d6e63fe40208",
+       "model_id": "6e9fbf9606c041be8ccce33993e6db97",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3719,7 +3719,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3886f5c8048446289da16359bdfac28",
+       "model_id": "5fbdba88e9f04f57bcacf88f7e6ee575",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3748,7 +3748,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "194e796abfbd4bf5b942a551449ac032",
+       "model_id": "dd0d93474d604876af4bc3b507340ead",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3783,7 +3783,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a54209e2caa4c1dbe19e0018c5c4343",
+       "model_id": "517f48cb8d4c432b93c49e939034d17a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3817,7 +3817,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a595c2f4024b45f78ea5926e1c2a1dad",
+       "model_id": "2edab57b863244d88448a1e5e3574e75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3849,7 +3849,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f80f30a5e3046afa5b48852aebd5ab4",
+       "model_id": "a6eceb5c4ef14344a21cc869fef8e597",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3981,23 +3981,24 @@
     "submitterCountry.observe(check_Submitter, names='value')\n",
     "emailForm.observe(check_Submitter, names='value')\n",
     "confirmSubmitterButton.on_click(confirm_Submitter)\n",
-    "confirmSubmitterButton.on_click(check_Contract)\n",
     "\n",
-    "modeleButton.observe(check_Product, names='value')\n",
+    "\n",
+    "uniteButton.observe(check_Product, names='value')\n",
     "listeDesignCategoryButton.observe(check_Product, names='value')\n",
     "lwlButton.observe(check_Product, names='value')\n",
     "mldcButton.observe(check_Product, names='value')\n",
-    "confirmProductButton.on_click(confirm_Product)\n",
-    "confirmProductButton.on_click(check_Contract)\n",
     "\n",
+    "confirmProductButton.on_click(check_Contract)\n",
     "modeleTypeButton.observe(check_Product, names='value')\n",
     "contextButton.observe(check_Contract)\n",
     "matiereButton.observe(check_Contract)\n",
     "controlButton.observe(check_Contract)\n",
     "uploader.observe(check_Contract)\n",
     "languageButton.observe(check_Contract)\n",
+    "confirmSubmitterButton.on_click(check_Contract)\n",
     "\n",
     "confirmContractButton.on_click(confirm_Contract)\n",
+    "confirmProductButton.on_click(confirm_Product)\n",
     "\n",
     "modeleButton.observe(update_contract, names='value')\n",
     "contextButton.observe(update_contract, names='value')\n",
@@ -4019,7 +4020,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73b9531b858a41e4bb7409455a246d19",
+       "model_id": "1c68357f5c5f49beaae4981dd4285cc7",
        "version_major": 2,
        "version_minor": 0
       },
