--- a/EC_superviser.ipynb
+++ b/EC_superviser.ipynb
@@ -456,7 +456,7 @@
     "\n",
     "def sendEmail(sujet,html,pieces):\n",
     "    \n",
-    "    \n",
+    "    serverOutput.value = 'Requesting SSL connection...'\n",
     "    \n",
     "    server = smtplib.SMTP_SSL('diego.o2switch.net') # On utilise SMTP_SSL() à la place de SMTP()\n",
     "    # server.set_debuglevel(1) # Décommenter pour activer le debug\n",
@@ -922,6 +922,7 @@
     "\n",
     "def check_Contract(change):\n",
     "    global nocontractIcone\n",
+    "    serverOutput.value = 'Checking contract...'\n",
     "    if (confirmSubmitterButton.description == \"Identified\")\\\n",
     "    and (confirmProductButton.description == \"Identified\")\\\n",
     "    and Title455.value !=\"<font size=1>subject</font>\"\\\n",
@@ -933,6 +934,7 @@
     "        g.value =\"\"\n",
     "        f.value =\"\"\n",
     "        contractZone.value = nocontractIcone\n",
+    "        serverOutput.value = 'Contract waiting for ackowledgement.'\n",
     "    if confirmContractButton.description =='Accepted':\n",
     "        confirmContractButton.disabled = False\n",
     "        confirmContractButton.button_style='warning'\n",
@@ -941,6 +943,7 @@
     "        details.value = \"\"\n",
     "        g.value =\"\"\n",
     "        f.value =\"\"\n",
+    "        serverOutput.value = 'Contract waiting for ackowledgement.'\n",
     "        \n",
     "def check_Submitter(change):\n",
     "    global nocontractIcone\n",
@@ -1111,7 +1114,7 @@
     "        Utilice esta dirección de correo electrónico para todas las consultas.</code>\" \n",
     "    \n",
     "    sendEmail(sujet,html,'')\n",
-    "\n",
+    "    serverOutput.value = 'Submitter registered successfully.'\n",
     "    \n",
     "    \n",
     "\n",
@@ -2521,7 +2524,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d7fb86d29d3467b870dc653026af68f",
+       "model_id": "9a815dd0256047249356ff91d8f31c40",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2585,7 +2588,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7a5726367cd4ded8f6988872d0f7b1e",
+       "model_id": "712b4cf813984058a7bf7fb30b9d80a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2614,7 +2617,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5304ec64a08439caa531a7cc58782b4",
+       "model_id": "d7fafb91f63748e5b04756e2e384f1c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3085,7 +3088,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ff1947d4706490084a25011ee26f5b2",
+       "model_id": "97a1e98e61074e22a1484345ebc5e4c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3119,7 +3122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59ed70c499094255afdc845d0bf32a4d",
+       "model_id": "1898b4655af44d43afe008405f30ae79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3162,7 +3165,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "434bdc203af84ac39d4cc6b4df569ef6",
+       "model_id": "8aa114cd726b494d8053e6d6ead2dbae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3195,7 +3198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47fa2b4470c64aa192aa48f03680709b",
+       "model_id": "80758b7b9dea451da7a286d00d7763a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3224,7 +3227,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "084ff2aae1c240b9b2b9f1c3acf67420",
+       "model_id": "cc8eaeea721d456eac5e5cf72851295d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3275,7 +3278,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0171d16068d74d3ca2385ba71b5f7de9",
+       "model_id": "9ca8daede86b46da998d353c503301d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3317,7 +3320,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c6eef82cf264cb8adef7e2b70d749b2",
+       "model_id": "c37b2a6bf3af4dd185a57b39dd3df445",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3335,6 +3338,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "9513cc7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad1aa809aaf241c3bdf12cc1032e1c1f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Server offline', placeholder=''), Button(description='Send', icon='paper-plane', st…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "menu3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "id": "2a37a55a",
    "metadata": {},
@@ -3342,7 +3370,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5155d90442b843dfb210039917f10026",
+       "model_id": "fb6f1e82163e4e8bb7adbd05f56e1f92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3371,7 +3399,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eaf326a831df44d590396b6c751a5883",
+       "model_id": "9eb48916af994035a8d83fffb15d3a22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3406,7 +3434,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "177d05b5c9e24f938040ec6ed14c6004",
+       "model_id": "a4f6d881ad7e4da7bb2095e7b2bccc65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3449,7 +3477,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe47f31006d045e986577b001969d123",
+       "model_id": "a0ad80a6aa1c47f9ba184dba735cc07a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3474,7 +3502,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7adf7502e124fa2a159f5957699f438",
+       "model_id": "b75fecc574ce47c582201fad452e3c5e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3503,7 +3531,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "831308da2bf04bdb8ed3849094ccc3ce",
+       "model_id": "cbb92d90663b45f29ede9d5ca5bee506",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3538,7 +3566,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0112d2d68a71498eb41afc56a11e6a4a",
+       "model_id": "c245b6ac975f43f1a09440d5a62e3609",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3588,7 +3616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c19fbc7fe7c0472eabbd32ef991f8136",
+       "model_id": "f9491fa924f542c5be52601230bfc1b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3644,7 +3672,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eae63c2c9b084212b80af98e89538e80",
+       "model_id": "ca9cedeee20b458eaddb8840e9d1fb37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3669,7 +3697,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6aaacf5f4697406787324eda75492aa2",
+       "model_id": "5512914a704f4725b35a2a43eb666842",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3694,7 +3722,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e9fbf9606c041be8ccce33993e6db97",
+       "model_id": "d6d9c068af534190acd121f14c7cb425",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3719,7 +3747,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fbdba88e9f04f57bcacf88f7e6ee575",
+       "model_id": "e4e28fa96a934d4080dee09cf7f62ae8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3748,7 +3776,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd0d93474d604876af4bc3b507340ead",
+       "model_id": "0a6b217edf6a4cbbacbedd58c11e3b55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3783,7 +3811,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "517f48cb8d4c432b93c49e939034d17a",
+       "model_id": "fe3056ff77e14419ac600eea8ebc04cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3817,7 +3845,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2edab57b863244d88448a1e5e3574e75",
+       "model_id": "665e3b36f8994950a7d25adb99356f43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3849,7 +3877,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6eceb5c4ef14344a21cc869fef8e597",
+       "model_id": "2a5afd63dc04451e805fdcb655152419",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4020,7 +4048,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c68357f5c5f49beaae4981dd4285cc7",
+       "model_id": "dee1f5aa7ac446c7b3a834f377187fb4",
        "version_major": 2,
        "version_minor": 0
       },
